# machine_learning_II

./: README.md  borrar.py  setup.py
unsupervised/: point5.py
unsupervised.egg-info/: PKG-INFO  SOURCES.txt
unsupervised/clustering/: kmeans.py  kmedoids.py
unsupervised/dim_rel/: PCA.py  t_SNE.py
workshop_I/: point_1.py  point_10.md  point_2.py  point_4.py  point_5.py  point_6.py  point_7.py  point_8.py  point_9.md  pyproject.toml
workshop_I/unsupervised/: point_4.py  point_5.py  point_6.py  point_7.py  setup.py
workshop_I/unsupervised/clustering/: logistic_regression.py
workshop_I/unsupervised/dim_rel/: PCA_robust.py  SVD.py  TSNE.py  t_SNE.py
workshop_II/: point1.md  point2.md  point3.md  point5_clusters.py  point5_kmeans_silhoutte.py  point5_kmedoids_silhoutte.py  point6_models.py  point6_plot.py  pyproject.toml
