[tool.poetry]
name = "workshopi"
version = "0.1.0"
description = ""
authors = ["TatianaGarcia1128 <jtatiana1128@gmail.com>"]
readme = "README.md"
packages = [{include = "unsupervised"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
scikit-image = "^0.22.0"
fbpca = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
