[tool.poetry]
name = "workshopii"
version = "0.1.0"
description = ""
authors = ["TatianaGarcia1128 <jtatiana1128@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn-extra = "^0.3.0"
numpy = "^1.26.4"
disutils = "^1.4.32.post2"
setuptools = "^69.1.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
